--- a/dart_serve/pubspec.yaml
+++ b/dart_serve/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ">=2.17.6 <3.0.0"
 
 dependencies:
+  kiwi: ^4.0.2
   shelf: ^1.3.2
   shelf_hotreload: ^1.3.0
   shelf_router: ^1.1.3
