--- a/dart_serve_cli/pubspec.yaml
+++ b/dart_serve_cli/pubspec.yaml
@@ -12,11 +12,9 @@ dependencies:
   args:
   analyzer:
   dart_serve:
-    git: 
-      url: https://github.com/gustavo-hillesheim/dart_serve
-      path: dart_serve
+    path: ../dart_serve
   code_generator:
-    git: https://github.com/gustavo-hillesheim/dart_code_generator
+    path: ../../code_generator
 
 dev_dependencies:
   lints: ^2.0.0
